--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
   },
   "dependencies": {
     "chart.js": "^4.4.0",
+    "google-map-react": "^2.2.1",
     "next": "14.0.3",
     "react": "^18",
     "react-dom": "^18",
-    "react-google-charts": "^4.0.1"
+    "react-google-charts": "^4.0.1",
+    "react-leaflet": "^4.1.0"
   },
   "devDependencies": {
     "@types/node": "^20",
