--- a/package.json
+++ b/package.json
@@ -18,9 +18,11 @@
     "react-leaflet": "^4.1.0"
   },
   "devDependencies": {
+    "@types/leaflet": "^1.9.8",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/react-leaflet": "^3.0.0",
     "eslint": "^8",
     "eslint-config-next": "14.0.3",
     "typescript": "^5"
