--- a/package.json
+++ b/package.json
@@ -11,11 +11,13 @@
   "dependencies": {
     "chart.js": "^4.4.0",
     "google-map-react": "^2.2.1",
+    "mapbox-gl": "^3.0.0",
     "next": "14.0.3",
     "react": "^18",
     "react-dom": "^18",
     "react-google-charts": "^4.0.1",
-    "react-leaflet": "^4.1.0"
+    "react-leaflet": "^4.1.0",
+    "react-map-gl": "^7.1.6"
   },
   "devDependencies": {
     "@types/leaflet": "^1.9.8",
